@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.16</version>
+		<version>3.3.5</version>
 		<relativePath />
 	</parent>
 
@@ -33,42 +33,59 @@
 	<properties>
 
 		<!-- dependencies version -->
-		<commons.io.version>2.6</commons.io.version>
-		<commons.lang.version>3.9</commons.lang.version>
+		<commons.io.version>2.17.0</commons.io.version>
+		<commons.lang.version>3.17.0</commons.lang.version>
 		<commons.collections.version>4.4</commons.collections.version>
+		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
+		<springframework.boot.version>3.3.5</springframework.boot.version>
 
-		<spring.version>5.3.30</spring.version>
-		<spring-data.version>2.7.16</spring-data.version>
+		<spring.version>6.1.14</spring.version>
+		<spring-data.version>3.3.5</spring-data.version>
 
-		<mapstruct.version>1.3.1.Final</mapstruct.version>
-		<lombok.version>1.18.6</lombok.version>
-		<minidev.version>2.3</minidev.version>
-		<json.version>20200518</json.version>
-		<jsoup.version>1.12.1</jsoup.version>
-		<itextpdf.version>5.5.13.1</itextpdf.version>
-		<flyingsauver.version>9.1.19</flyingsauver.version>
+		<mapstruct.version>1.6.3</mapstruct.version>
+		<lombok.version>1.18.36</lombok.version>
+		<minidev.version>2.5.1</minidev.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
+		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+		<json.version>20240303</json.version>
+		<jsoup.version>1.18.1</jsoup.version>
+		<itextpdf.version>5.5.13.4</itextpdf.version>
+		<flyingsauver.version>9.7.2</flyingsauver.version>
 		<jtidy.version>r938</jtidy.version>
 		<geotools.version>16.1</geotools.version>
-
-		<activiti.version>7.1.0.M5</activiti.version>
-		<log4j.version>2.17.0</log4j.version>
-
-		<openapi.version>1.7.0</openapi.version>
-		<swagger.version>2.2.8</swagger.version>
-		<jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
-		<openapi.plugin.version>7.0.1</openapi.plugin.version>
+		<jakarta.version>3.1.0</jakarta.version>
+		<openapi-web.version>2.6.0</openapi-web.version>
 		<springfox.version>3.0.0</springfox.version>
+		
+		<activiti.version>7.1.0.M6</activiti.version>
+		<log4j.version>2.17.0</log4j.version>
+		<hibernate.spatial.version>6.6.3.Final</hibernate.spatial.version>
 
-		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
-		<compiler.plugin.version>3.5.1</compiler.plugin.version>
-		<assemby.plugin.version>2.6</assemby.plugin.version>
-		<ant.plugin.version>3.0.0</ant.plugin.version>
-
+		<locationtech.jts.version>1.20.0</locationtech.jts.version>
+		<openapi.version>1.8.0</openapi.version>
+		<swagger.version>2.2.25</swagger.version>
+		<jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
+		<openapi.plugin.version>7.6.0</openapi.plugin.version>
+		<google.code.findbugs.version>3.0.2</google.code.findbugs.version>
+		<spring.security.version>6.3.4</spring.security.version>
 		<jackson.version>2.15.2</jackson.version>
 
+		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
+		<compiler.plugin.version>3.12.1</compiler.plugin.version>
+
+		<frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
+		<docker-maven-plugin.version>1.2.2</docker-maven-plugin.version>
+		
+		<plugin.maven-jar-plugin.version>3.4.2</plugin.maven-jar-plugin.version>
+		<plugin.maven-javadoc-plugin.version>3.11.2</plugin.maven-javadoc-plugin.version>
+		<plugin.maven-assembly-plugin.version>3.7.1</plugin.maven-assembly-plugin.version>
+		
+		
+		<guava.version>28.2-jre</guava.version>
+			
 		<!-- java version -->
-		<java.source.version>11</java.source.version>
-		<java.target.version>11</java.target.version>
+		<java.source.version>17</java.source.version>
+		<java.target.version>17</java.target.version>
 
 		<!-- Project properties -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -79,6 +96,7 @@
 		<sonar.projectName>${project.artifactId}</sonar.projectName>
 		<sonar.exclusions>**/config/*.java,**/exception/**/*.java,**/test/*.java</sonar.exclusions>
 		<sonar.global.test.exclusions>**/*Test.java</sonar.global.test.exclusions>
+
 	</properties>
 
 	<distributionManagement>
@@ -106,12 +124,30 @@
 
 	<dependencyManagement>
 		<dependencies>
-
+			<!-- Spring Boot -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${springframework.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-logging</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 			<!-- Modules -->
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>georchestra-signalement-api</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.activiti</groupId>
+				<artifactId>activiti-spring-boot-starter</artifactId>
+				<version>${activiti.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -294,7 +330,6 @@
 			</dependency>
 
 
-			<!-- OpenApi dependencies -->
 
 			<dependency>
 				<groupId>io.swagger.core.v3</groupId>
@@ -310,6 +345,23 @@
 
 			<dependency>
 				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>${openapi-web.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-ui</artifactId>
 				<version>${openapi.version}</version>
 			</dependency>
@@ -318,12 +370,6 @@
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-data-rest</artifactId>
 				<version>${openapi.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>${springfox.version}</version>
 			</dependency>
 
 			<dependency>
@@ -358,12 +404,6 @@
 			</dependency>
 
 			<!-- Activiti -->
-			<!-- https://mvnrepository.com/artifact/org.activiti/activiti-spring-boot-starter -->
-			<dependency>
-				<groupId>org.activiti</groupId>
-				<artifactId>activiti-spring-boot-starter</artifactId>
-				<version>${activiti.version}</version>
-			</dependency>
 
 			<dependency>
 				<groupId>org.activiti.dependencies</groupId>
@@ -424,7 +464,33 @@
 				<artifactId>maven-replacer-plugin</artifactId>
 				<version>${maven-replacer-plugin.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.hibernate.orm</groupId>
+				<artifactId>hibernate-spatial</artifactId>
+				<version>${hibernate.spatial.version}</version>
+			</dependency>
+			<!-- OpenApi dependencies -->
+			<dependency>
+				<groupId>org.locationtech.jts</groupId>
+				<artifactId>jts-core</artifactId>
+				<version>${locationtech.jts.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>${javax.annotation-api.version}</version>
+			</dependency>
 
+			<dependency>
+				<groupId>com.google.code.findbugs</groupId>
+				<artifactId>jsr305</artifactId>
+				<version>${google.code.findbugs.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
@@ -457,12 +523,22 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${springframework.boot.version}</version>
+				</plugin>
 				<!-- Swagger -->
 				<plugin>
 					<groupId>org.openapitools</groupId>
 					<artifactId>openapi-generator-maven-plugin</artifactId>
 					<version>${openapi.plugin.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin.version}</version>
 				</plugin>
 
 				<!-- Generate Lombok annotation then Mapstruct classes -->
@@ -492,26 +568,58 @@
 				</plugin>
 
 				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>${assemby.plugin.version}</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${plugin.maven-jar-plugin.version}</version>
 				</plugin>
-
+				<!-- Crée un jar contenant les javadocs du projet -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${plugin.maven-javadoc-plugin.version}</version>
+					<configuration>
+						<source>11</source>
+						<failOnError>false</failOnError>
+						<doclint>none</doclint>
+						<quiet>true</quiet>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>${plugin.maven-assembly-plugin.version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>${ant.plugin.version}</version>
 				</plugin>
-
+				<!-- tests unitaires -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>-Dfile.encoding=UTF-8 --add-opens
+							java.base/java.util=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-				</plugin>
-
 			</plugins>
 		</pluginManagement>
 	</build>
